Blackpurl/src/objects/Part_Aging_Period__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Period_1__c</fullName>
        <defaultValue>&apos;60&apos;</defaultValue>
        <label>Period 1</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period_2__c</fullName>
        <defaultValue>&apos;180&apos;</defaultValue>
        <label>Period 2</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period_3__c</fullName>
        <defaultValue>&apos;365&apos;</defaultValue>
        <label>Period 3</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Part Aging Period</label>
</CustomObject>